samples/_failures_safe/1761092380_fd66aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3278e6d3.c: In function ‘main’:
./samples/SAFE/__tmp_3278e6d3.c:148:13: error: expected expression at end of input
  148 |             case
      |             ^~~~
./samples/SAFE/__tmp_3278e6d3.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3278e6d3.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3278e6d3.c:148:13: error: expected declaration or statement at end of input
